--- a/.gitignore/.gitignore
+++ b/.gitignore/.gitignore
@@ -1,2 +1,10 @@
-.gradle
-.idea
+.gitignore
+        .idea/
+        README.md
+        app/
+        build.gradle
+        gradle.properties
+        gradle/
+        gradlew
+        gradlew.bat
+        settings.gradle
